Update 'pvu4rekkb-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:e494f6a7c4bb3f3884de8f99f034f430c6a4808c@sha256:b1ea345e0eb1ec183fc0a4629fab8e6e217212e8a83299d9b35df5910513e3aa

--- a/components/pvu4rekkb-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/pvu4rekkb-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pvu4rekkb-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:e494f6a7c4bb3f3884de8f99f034f430c6a4808c@sha256:b1ea345e0eb1ec183fc0a4629fab8e6e217212e8a83299d9b35df5910513e3aa
+          name: container-image
